Fixed button spacing

--- a/src/App.css
+++ b/src/App.css
@@ -308,11 +308,11 @@ USER RANK PAGE
   
 }
 
-.createListPagebuttons button {
+.createListPagebuttons {
   display:flex;
-  /* flex-direction: row; */
-  /* justify-content: space-between; */
-  
+  flex-direction: row;
+  justify-content: space-between;
+  width: 1280px;
 }
 
 .button {
